loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:5: error: ')' expected but 'if' found.
    if(estSurBiscuit()){
    ^Poucet2:8: error: 'while' expected but ')' found.
  ) while(!crossing())
  ^Poucet2:15: error: '(' expected but '}' found.
}
^